gke/gke-expose-services/nginx-w-l7/hello-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello4
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: hello4
  type: NodePort
