gke/gke-expose-services/nginx-w-l7/hello-l7-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gclb-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-svc
          servicePort: 80
